2005-02-08  Roland Illig  <roland.illig@gmx.de>

	* dialog.c: Marked unused parameters. Now dlg_broadcast_msg_to
	does what the comment above it says.
	* main.c (maybe_cd): Removed unused parameter.
	* main.h: Likewise.
	* screen.c: Marked unused parameters. Updated use of maybe_cd.
	* cons.handler.c: Marked unused parameters.
	* dir.c: Likewise.
	* find.c: Likewise.
	* help.c: Likewise.
	* layout.c: Likewise.
	* mountlist.c: Likewise.
	* popt.c: Likewise.
	* poptconfig.c: Likewise.
	* popthelp.c: Likewise.
	* regex.c: Likewise.
	* subshell.c: Likewise.
	* tree.c: Likewise.
	* util.c: Likewise.
	* utilunix.c: Likewise.
	* widget.c: Likewise.
	* wtools.c: Likewise.

2005-02-08  Roland Illig  <roland.illig@gmx.de>

	* screen.c (string_file_*): Don't use static buffers.
	* screen.c (format_file): Provide a buffer for the string_file_*
	functions.

2005-02-08  Roland Illig  <roland.illig@gmx.de>

	* widget.h: Renamed define_label to buttonbar_set_label. Renamed
	define_label_data to buttonbar_set_label_data. Renamed
	redraw_labels to buttonbar_redraw.
	* widget.c: Likewise.
	* help.c, main.c, screen.c, tree.v, view.c: Likewise.
	* util.h: Added macro str_cmp to allow syntactically nice string
	comparison.

2005-02-08  Roland Illig  <roland.illig@gmx.de>

	* *.c: Reordered header inclusion.

2005-02-08  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* ext.c (regex_command): Eliminate g_string_*().

2005-02-08  Roland Illig  <roland.illig@gmx.de>

	* dialog.h: Moved and reformatted #definitions.
	* execute.h: Likewise.
	* mouse.h: Likewise.
	* widget.h: Moved constants to the appropriate places (just
	before the variable they will be used with).
	* widget.c: HISTORY_FILE_NAME was not needed in widget.h,
	so it has been made private to this file.

2005-02-07  Roland Illig  <roland.illig@gmx.de>

	* unixcompat.h: Emit warnings for the fallback case of the
	major/minor/makedev macros.

2005-02-07  Roland Illig  <roland.illig@gmx.de>
